--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "typescript": "3.2.1"
   },
   "scripts": {
